--- a/BigFileWatcherVM/Presenters.csproj
+++ b/BigFileWatcherVM/Presenters.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{937DD45F-9FA5-4463-830B-8C7EB5A09883}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>BigFileWatcherVM</RootNamespace>
-    <AssemblyName>BigFileWatcherVM</AssemblyName>
+    <RootNamespace>Presenters</RootNamespace>
+    <AssemblyName>Presenters</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -63,7 +63,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\GeneralPresenter.cs" />
+    <Compile Include="Presenters\GeneralPresenter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
